--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "bootstrap": "^4.5.0",
+        "hover.css": "^2.3.2",
         "jquery": "^3.5.1"
     }
 }
